projects/progress-button-showcase/src/styles.scss
/* ... */
.ydd-page-preview-item-content:before {
  content: 'COMPONENT PREVIEW';
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  font-size: 10px;
  color: #ddd;
  padding: 1em;
  width: 100%;
  box-sizing: border-box;
  text-align: right;
  letter-spacing: 1px;
}

.ydd-page-preview .settings {
  width: 40%;
  box-sizing: border-box;
  padding: 0;
  overflow: hidden;
  height: 100%;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.02);
  border-left: 1px solid #f0f0f0;
  z-index: 2;
}

.ydd-page-preview .ng-scrollbar {
  height: calc(100% - 65px);
}

.ydd-page-preview .settings-content {
  padding: 2em 3em;
  box-sizing: border-box;
}

.ydd-page-preview .settings-header {
  display: flex;
  align-items: center;
  padding: 1em 3em;
  box-sizing: border-box;
  background: #fff;
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.05);
  z-index: 3;
  border-bottom: 1px solid #f0f0f0;
  height: 65px;
}

.ydd-page-preview .settings-header .repo-link {
  border-bottom: none;
  margin-right: 20px;
  padding: 0;
  line-height: 24px;
  max-height: 24px;
  opacity: 0.2;
  transition: opacity 0.2s ease-in-out;
}

.ydd-page-preview .settings-header .repo-link:hover {
  opacity: 1;
}

.ydd-page-preview .settings-header code {
  padding: 5px 20px;
  border-radius: 5px;
  border: 2px solid #ccc;
  font-weight: bold;
  background: #f9f9f9;
  color: #999;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  position: relative;
}

.ydd-page-preview .settings-header code:hover {
  border: 2px solid #000;
  font-weight: bold;
  background: transparent;
  color: #000;
}

.ydd-page-preview .settings-header code.copied,
.ydd-page-preview .settings-header code.copied:hover {
  border: 2px solid #ccc;
}

.ydd-page-preview .settings-header code:after {
  content: "COPIED!";
  display: flex;
  top: 0;
  left: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  background: #FFFFFF;
  border-radius: 3px;
  justify-content: center;
  align-items: center;
  color: #999;
  font-family: Gilroy-Bold, sans-serif;
  font-weight: 700;
  font-size: 12px;
  letter-spacing: 1px;
  opacity: 0;
  transition: all 0.2s ease-in-out;
}

.ydd-page-preview .settings-header code.copied:after {
  opacity: 1;
}

.ydd-page-preview .settings-header .repo-link img {
  max-height: 24px;
}


.ydd-page-preview .settings h3 {
  font-family: Gilroy-Bold, sans-serif;
  font-weight: 700;
}

.ydd-page-preview-settings-field {
  margin: 1em 0;
  display: flex;
  align-items: center;
}

.ydd-page-preview-settings-field label {
  max-width: 240px;
  width: 240px;
  padding-right: 20px;
}

.ydd-page-preview-settings-field .field {
  flex-grow: 2;
  width: 55%;

  &.disabled {
    position: relative;

    &:after {
      position: absolute;
      display: block;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background: rgba(255, 255, 255, 0.3);
      z-index: 150;
      content: ' ';
      cursor: not-allowed;
    }

    small {
      line-height: 1.3 !important;
      display: inline-block;
      margin-top: 10px;
      font-size: 13px;
    }
  }
}

.ydd-page-preview-settings-field .field.ydd-color-preview {
  display: flex;
  align-items: center;
}

.ydd-page-preview-settings-field .field.ydd-color-preview input {
  flex-grow: 2;
  margin-right: 10px;
  font-family: monospace;
  letter-spacing: 1px;
  font-size: 12px;
}

.ydd-page-preview-settings-field .field.ydd-color-preview span {
  display: inline-block;
  height: 20px;
  width: 20px;
  min-width: 20px;
  border: 2px solid #f0f0f0;
  border-radius: 50%;
  flex-grow: 2;
}

@media (max-width: 1400px) {
  .ydd-page-preview .item {
    width: calc(100% - 420px);
  }

  .ydd-page-preview .settings {
    width: 420px;
  }

  .ydd-page-preview .settings-header .repo-link,
  .ydd-page-preview .settings-header .repo-link img {
    line-height: 16px;
    max-height: 16px;
  }

  .ydd-page-preview-settings-field label {
    max-width: 100px;
    width: 100px;
    font-size: 14px;
  }
}

@media (max-width: 1200px) {
  .ydd-page-preview .item {
    width: 100%
  }

  .ydd-page-preview .settings {
    position: fixed;
    right: -500px;
    top: 0;
    background: #ffffff;
    transition: right 0.3s ease-in-out;
  }

  .ydd-page-preview .settings.open {
    right: 0;
  }
}


/* SELECT */

.ng-select {
  outline: none;
  font-size: 14px;
}

.ng-select .ng-select-container {
  border: 2px solid #f0f0f0;
  background: #f9f9f9;
  cursor: pointer;
  transition: all 0.2s ease;
}

.ng-select .ng-select-container:hover {
  box-shadow: none;
  border-color: #cccccc;
}

.ng-select .ng-select-container .ng-value-container .ng-input > input {
  font-size: 14px;
  font-family: Gilroy-Medium, sans-serif;
}

.ng-select.ng-select-focused:not(.ng-select-opened) > .ng-select-container {
  border-color: #333;
  box-shadow: none;
}

.ng-dropdown-panel {
  background-color: #fff;
  border: 2px solid #333;
  border-top: 0;
  box-shadow: none;
  transition: all 0.2s ease;
}

.ng-dropdown-panel.ng-select-top {
  border-top: 2px solid #333;
  border-bottom: none;
}


.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
  background-color: #f9f9f9;
}

.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected,
.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected.ng-option-marked {
  background-color: #f0f0f0;
}


.ng-select.ng-select-opened > .ng-select-container {
  background: #fff;
  border-color: #333333 #333333 transparent;
}

.ng-select-top.ng-select-opened > .ng-select-container {
  border-color: transparent #333333 #333333;
}

.open-settings-icon, .close-settings-icon {
  background-repeat: no-repeat;
  background-position: center center;
  position: absolute;
  top: 20px;
  right: 20px;
  opacity: 0.5;
  display: none;
  width: 16px;
  height: 16px;
  background-size: 16px;
  cursor: pointer;
  transition: opacity 0.2s ease-in-out;
}

.open-settings-icon:hover, .close-settings-icon:hover {
  opacity: 1;
}
/* ... */

